--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Listing articles</h1>
 
+<h2><%= link_to 'New Articles' %></h2>
+
 <table>
 	<tr>
 		<th>Title</th>
 		<th>Text</th>
-		<th>Show</th>
+		<th colspan="-2">Show</th>
+		<th>Edit</th>
 	</tr>
 
 	<% @articles.each do |article| %>
